# qt_trainlcd_app

./: CMakeLists.txt  led_subwindow.cpp  led_subwindow.h  led_subwindow.ui  led_subwindow_quick.qml  led_subwindow_quickwidget.cpp  led_subwindow_quickwidget.h  main.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
